--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="assist_line_colo">#EAEDF2</color>
     <color name="color_BAAFA7">#BAAFA7</color>
     <color name="color_f5">#F5F5F5</color>
+    <color name="color_f3">#F3F3F3</color>
     <color name="color_382D25">#382D25</color>
     <color name="color_FF8E00">#FF8E00</color>
     <color name="color_F8F8F8">#F8F8F8</color>
