--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,7 @@
         android:background="@null"
         android:hint="@string/login_name"
         android:paddingVertical="10dp"
-        android:text="zy" />
+        android:text="15557870253" />
 
     <View
         android:layout_width="match_parent"
@@ -62,7 +62,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="20dp"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
@@ -75,6 +76,7 @@
             android:id="@+id/tvPrivacy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingVertical="5dp"
             android:text="《杭州湾运维协议》"
             android:textColor="@color/color_99"
             android:textSize="11sp" />
@@ -86,7 +88,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="25dp"
+        android:padding="10dp"
         android:text="忘记密码？"
-        android:textColor="@color/color_66" />
+        android:textColor="@color/color_66"
+        android:visibility="gone" />
 </LinearLayout>
