--- a/app/src/main/res/layout/dialog_chosedevice_fragment.xml
+++ b/app/src/main/res/layout/dialog_chosedevice_fragment.xml
@@ -17,6 +17,8 @@
             android:id="@+id/tvSuccesNum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:drawableStart="@drawable/success"
+            android:drawablePadding="4dp"
             android:textColor="#68D279"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -27,6 +29,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
+            android:drawableStart="@drawable/fail"
+            android:drawablePadding="4dp"
             android:textColor="#FF5F00"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tvSuccesNum"
@@ -36,6 +40,8 @@
             android:id="@+id/tvTotal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:drawableStart="@drawable/total"
+            android:drawablePadding="7dp"
             android:textColor="@color/color_99"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
