--- a/app/src/main/res/layout/item_myreport.xml
+++ b/app/src/main/res/layout/item_myreport.xml
@@ -14,9 +14,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8.5dp"
         android:layout_marginTop="10.5dp"
-        android:drawableStart="@drawable/device_num"
+        android:drawableStart="@drawable/report_icon"
         android:drawablePadding="4.5dp"
-        android:text="65656"
+        android:singleLine="true"
         android:textColor="@color/color_33"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -47,6 +47,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="25dp"
+        android:drawableStart="@drawable/location_icon_gray"
+        android:drawablePadding="5dp"
         android:text="设备位置："
         android:textColor="@color/color_33"
         android:textSize="13sp"
@@ -58,7 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8.5dp"
-        android:text="22"
+        android:singleLine="true"
         android:textColor="@color/color_66"
         android:textSize="13sp"
         app:layout_constraintStart_toEndOf="@+id/tvLocationTitle"
@@ -70,6 +72,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="14dp"
+        android:drawableStart="@drawable/tips_icon"
+        android:drawablePadding="5dp"
         android:text="设备描述："
         android:textColor="@color/color_33"
         android:textSize="13sp"
@@ -81,7 +85,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8.5dp"
-        android:text="22"
+        android:singleLine="true"
         android:textColor="@color/color_66"
         android:textSize="13sp"
         app:layout_constraintStart_toEndOf="@+id/tvDesTitle"
@@ -93,6 +97,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="14dp"
+        android:drawableStart="@drawable/detail_icon"
+        android:drawablePadding="5dp"
         android:text="故障详情："
         android:textColor="@color/color_33"
         android:textSize="13sp"
@@ -104,7 +110,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8.5dp"
-        android:text="22"
+        android:singleLine="true"
         android:textColor="@color/color_66"
         android:textSize="13sp"
         app:layout_constraintStart_toEndOf="@+id/tvDetailTitle"
