--- a/app/src/main/res/layout/activity_edit_phone.xml
+++ b/app/src/main/res/layout/activity_edit_phone.xml
@@ -55,6 +55,7 @@
         android:maxLength="13"
         android:paddingHorizontal="18dp"
         android:paddingVertical="15dp"
+        android:singleLine="true"
         android:textColor="@color/color_99"
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@+id/tvHeader" />
