--- a/app/src/main/res/layout/activity_forget_pwd.xml
+++ b/app/src/main/res/layout/activity_forget_pwd.xml
@@ -40,6 +40,7 @@
         android:maxLength="13"
         android:paddingHorizontal="32dp"
         android:paddingVertical="12dp"
+        android:singleLine="true"
         app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
 
     <TextView
@@ -73,6 +74,7 @@
         android:maxLength="6"
         android:paddingHorizontal="32dp"
         android:paddingVertical="12dp"
+        android:singleLine="true"
         app:layout_constraintTop_toBottomOf="@+id/etPhone" />
 
     <View
@@ -93,6 +95,7 @@
         android:maxLength="10"
         android:paddingHorizontal="32dp"
         android:paddingVertical="12dp"
+        android:singleLine="true"
         app:layout_constraintTop_toBottomOf="@+id/etCode" />
 
     <View
@@ -113,6 +116,7 @@
         android:maxLength="10"
         android:paddingHorizontal="32dp"
         android:paddingVertical="12dp"
+        android:singleLine="true"
         app:layout_constraintTop_toBottomOf="@+id/etNewPwd" />
 
     <View
