--- a/app/src/main/res/layout/activity_personal.xml
+++ b/app/src/main/res/layout/activity_personal.xml
@@ -21,12 +21,16 @@
 
     <TextView
         android:id="@+id/tvName"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
+        android:layout_marginEnd="10dp"
+        android:singleLine="true"
         android:textColor="@color/color_33"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/ivLogo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toEndOf="@+id/ivLogo"
         app:layout_constraintTop_toTopOf="@+id/ivLogo" />
 
@@ -40,6 +44,7 @@
         android:gravity="end"
         android:paddingVertical="15dp"
         android:paddingEnd="18dp"
+        android:singleLine="true"
         android:textColor="@color/color_99"
         app:layout_constraintTop_toBottomOf="@+id/ivLogo" />
 
@@ -63,6 +68,7 @@
         android:gravity="end"
         android:paddingVertical="15dp"
         android:paddingEnd="18dp"
+        android:singleLine="true"
         android:textColor="@color/color_99"
         app:layout_constraintTop_toBottomOf="@+id/tvPhone" />
 
@@ -85,6 +91,7 @@
         android:gravity="end"
         android:paddingVertical="15dp"
         android:paddingEnd="18dp"
+        android:singleLine="true"
         android:textColor="@color/color_99"
         app:layout_constraintTop_toBottomOf="@+id/tvCompany" />
 
