--- a/app/src/main/res/layout/mytoolbar.xml
+++ b/app/src/main/res/layout/mytoolbar.xml
@@ -22,8 +22,8 @@
         android:id="@+id/ivBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingHorizontal="16dp"
         android:paddingVertical="10dp"
-        android:paddingStart="16dp"
         android:src="@drawable/left_arrow_white"
         app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
         app:layout_constraintStart_toStartOf="parent"
