--- a/app/src/main/res/layout/item_home_devices.xml
+++ b/app/src/main/res/layout/item_home_devices.xml
@@ -3,57 +3,71 @@
     android:id="@+id/itemGroup"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:background="@color/white"
+    android:orientation="horizontal"
+    android:paddingVertical="20dp"
+    android:paddingStart="24dp">
 
-    <TextView
+    <ImageView
+        android:id="@+id/ivLogo"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:layout_weight="1" />
+
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:gravity="center"
-        android:paddingVertical="9dp"
-        android:text="情报板"
-        android:textColor="@color/color_99"
-        android:textSize="12sp" />
+        android:orientation="vertical"
+        android:paddingStart="17dp"
+        android:paddingEnd="10dp">
 
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:paddingVertical="9dp"
-        android:text="CM2837"
-        android:textColor="@color/color_99"
-        android:textSize="12sp" />
+        <TextView
+            android:id="@+id/tvDeviceName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/myreport_icon"
+            android:drawablePadding="7dp"
+            android:singleLine="true"
+            android:text="56656565"
+            android:textColor="@color/color_33"
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:paddingVertical="9dp"
-        android:text="故障"
-        android:textColor="@color/color_99"
-        android:textSize="12sp" />
+        <TextView
+            android:id="@+id/tvLocation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="9dp"
+            android:drawableStart="@drawable/location_icon_gray"
+            android:drawablePadding="6dp"
+            android:singleLine="true"
+            android:text="566565"
+            android:textColor="@color/color_66"
+            android:textSize="12sp" />
 
-    <TextView
-        android:id="@+id/tvDeviceStatus"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:paddingVertical="9dp"
-        android:text="维修进度"
-        android:textColor="@color/color_4692FF"
-        android:textSize="12sp" />
+        <TextView
+            android:id="@+id/tvTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="9dp"
+            android:drawableStart="@drawable/time_icon"
+            android:drawablePadding="6dp"
+            android:singleLine="true"
+            android:text="566565"
+            android:textColor="@color/color_66"
+            android:textSize="12sp" />
 
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1.5"
-        android:gravity="center"
-        android:paddingVertical="9dp"
-        android:text="2021-05-10 11:15"
-        android:textColor="@color/color_99"
-        android:textSize="12sp" />
-
+        <TextView
+            android:id="@+id/tvStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/common_maincolor_2dp"
+            android:paddingHorizontal="7.5dp"
+            android:paddingVertical="3.5dp"
+            android:text="维修中"
+            android:textColor="@color/white"
+            android:textSize="12sp" />
+    </LinearLayout>
 </LinearLayout>
