--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,8 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:layout_gravity="bottom"
-        android:background="@drawable/ripple_item_select"
+        android:background="@color/white"
+        app:itemBackground="@color/white"
         app:itemIconTint="@color/selector_bottom_navigation_item"
         app:itemTextColor="@color/selector_bottom_navigation_item"
         app:labelVisibilityMode="labeled"
