--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -40,13 +40,15 @@
         app:layout_constraintTop_toTopOf="@+id/ivLogo" />
 
     <ImageView
+        android:id="@+id/ivArrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="15dp"
         android:src="@drawable/right_arrow"
         app:layout_constraintBottom_toBottomOf="@+id/ivLogo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/ivLogo" />
+        app:layout_constraintTop_toTopOf="@+id/ivLogo"
+        app:tint="@color/white" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clOrder"
@@ -54,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="14dp"
         android:layout_marginTop="15dp"
-        android:background="@drawable/common_white_6dp"
+        android:background="@drawable/common_white_12dp"
         android:paddingVertical="30dp"
         app:layout_constraintTop_toBottomOf="@+id/ivLogo">
 
@@ -87,7 +89,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textColor="@color/color_33"
+            android:textColor="@color/main_color"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_weight="1"
@@ -135,7 +137,7 @@
         android:layout_marginTop="12dp"
         android:background="@color/white"
         android:drawableStart="@drawable/myreport_icon"
-        android:drawableEnd="@drawable/right_arrow"
+        android:drawableEnd="@drawable/arrow_right_gray"
         android:drawablePadding="10dp"
         android:padding="23dp"
         android:text="我的上报"
