--- a/app/src/main/res/layout/item_home_devices.xml
+++ b/app/src/main/res/layout/item_home_devices.xml
@@ -12,7 +12,9 @@
         android:id="@+id/ivLogo"
         android:layout_width="0dp"
         android:layout_height="100dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:scaleType="fitXY"
+        android:src="@drawable/device_fail_default" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -63,7 +65,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:background="@drawable/common_maincolor_2dp"
             android:paddingHorizontal="7.5dp"
             android:paddingVertical="3.5dp"
             android:text="维修中"
